# airflow-provider-rabbitmq

./: pyproject.toml
rabbitmq_provider/: __init__.py  hooks.py
