[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-rabbitmq"
authors = [
    { name = "kentuck13", email = "kentuck465@gmail.com" },

]
license = { text = "Apache License 2.0" }
description = "Rabbitmq airflow provider."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.4",
    "Flask-AppBuilder>=4.4",
]

[project.urls]
Homepage = "https://github.com/kentuck13/airflow-provider-rabbitmq"
Source = "https://github.com/kentuck13/airflow-provider-rabbitmq/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "rabbitmq_provider.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "rabbitmq_provider.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]
